[package]
name = "contact"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"


[dependencies]
deep_space = {git = "https://github.com/althea-net/deep_space", rev = "8c7f35d5dea389d0d942a98cd462981798e47a48", features = ["peggy", "key_import"]}
# deep_space = {version = "0.1", features = ["peggy", "key_import"]}
# deep_space = {path = "../deep_space"}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
actix-web = {version = "2.0", features=["openssl"]}
log = "0.4"
num256 = "0.2"
clarity = "0.1"
# clarity = {path = "../clarity"}

[dev-dependencies]
rand = "0.7"
actix = "0.9"
sha3 = "0.9"
