[package]
name = "contact"
version = "0.1.1"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"
repository = "https://github.com/althea-net/contact"
description = "A highly portable REST library for Cosmos blockchains"
license = "Apache-2.0"


[dependencies]
deep_space = {version = "0.2", features = ["peggy", "key_import"]}
# deep_space = {path = "../deep_space"}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
actix-web = {version = "3.0", features=["openssl"]}
log = "0.4"
num256 = "0.3"
clarity = "0.2"
# clarity = {path = "../clarity"}

[dev-dependencies]
rand = "0.7"
actix = "0.10"
sha3 = "0.9"
