[package]
name = "contact"
version = "0.4.2"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"
repository = "https://github.com/althea-net/contact"
description = "A highly portable REST library for Cosmos blockchains"
license = "Apache-2.0"


[dependencies]
deep_space = {version = "0.2", features = ["key_import"]}
cosmos-sdk-proto = {git = "https://github.com/cosmos/cosmos-rust/", branch = "jkilpatr/import-bank"}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.4"
num256 = "0.3"
tokio = {version = "1.4", features=["time"]}
tonic = "0.4"
tendermint-proto = "0.18"
prost = "0.7"
bytes = { version = "1", features = ["serde"] }

[dev-dependencies]
rand = "0.8"
sha3 = "0.9"
env_logger = "0.8"
tokio = {version = "1.4", features=["time"]}